DuPont DevSB/src/objects/CaseReason__c.object
<CustomObject>
    <description>List of Reason for Case</description>
    <fields>
        <fullName>CaseReason__c</fullName>
        <description>M/D lookup to Case</description>
        <inlineHelpText>Lookup to Case</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Reasons</relationshipLabel>
        <relationshipName>CaseReasons</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Other_Reason__c</fullName>
        <label>Other Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>M/M Lookup to Reason</description>
        <inlineHelpText>Lookup to Reason</inlineHelpText>
        <label>Reason</label>
        <referenceTo>Reason__c</referenceTo>
        <relationshipLabel>Case Reasons</relationshipLabel>
        <relationshipName>CaseReasons</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Case Reason</label>
    <nameField>
        <displayFormat>CSRSC-{0000000000}</displayFormat>
        <label>Case-Reason Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Reasons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>